将模式切换放到选择框中

--- a/schedule/src/app/personal/personal.component.html
+++ b/schedule/src/app/personal/personal.component.html
@@ -4,7 +4,7 @@
 <!--    <a class="btn btn-primary btn-sm" [routerLink]="'modifyPassword'"><i class="fas fa-edit"></i>修改密码</a>-->
 <!--  </div>-->
 <!--</div>-->
-<h4>我的资料</h4>
+<h4>我的信息</h4>
 <hr>
 <div class="row">
   <div class="col-md-3">
