--- a/schedule/src/app/schedule/table/table.component.html
+++ b/schedule/src/app/schedule/table/table.component.html
@@ -10,8 +10,7 @@
   <label class="col-sm-2 text-right col-form-label"><code>*</code>上课时间</label>
   <div class="col-sm-10">
     <div class="dropdown">
-      <span class="font-weight-bold mr-5">{{ pattern ? '定制模式' : '同步模式' }}</span>
-      <span *ngIf="overtimeWeekNumber !== undefined" class="font-weight-bold mr-5">当前周:&nbsp;{{ overtimeWeekNumber! + 1 }}</span>
+      <span *ngIf="overtimeWeekNumber !== undefined && currentTerm.id === term.id" class="font-weight-bold mr-5">当前周:&nbsp;{{ overtimeWeekNumber! + 1 }}</span>
       <span class="font-weight-bold">课程学时:&nbsp;&nbsp;{{ course?.hours}}</span>
     </div>
   </div>
@@ -31,9 +30,8 @@
         <th   class="col-sm-1">周{{day}}</th>
         <td  *ngFor="let bigLesson of bigLessons" class="col-sm-1 container-fluid">
           <div class="list-group">
-            <button class="list-group-item" [ngClass]="{'list-group-item-primary': buttonActive(d, bigLesson)}" (click)="showModel(d, bigLesson)">
-<!--              <h6>周{{day}}第{{bigLesson! + 1}}节</h6>-->
-              <span *ngIf="notEmptyWeeksTable[d][bigLesson].length">周: {{getNotEmptyWeeksOfTable(d, bigLesson)}}</span>
+            <button data-toggle="modal" data-target="#staticBackdrop" class="list-group-item" [ngClass]="{'list-group-item-primary': buttonActive(d, bigLesson)}" (click)="showModel(d, bigLesson)">
+              <span *ngIf="weeksRecorder[d][bigLesson].length">周: {{getNotEmptyWeeksOfTable(d, bigLesson)}}</span>
             </button>
           </div>
         </td>
@@ -43,12 +41,18 @@
   </div>
 </div>
 
-<app-yz-modal *ngIf="isShowModel" [width]="'65%'" [size]="'md'">
+<app-yz-modal *ngIf="isShowModel && false" [width]="'65%'" [size]="'md'">
   <div class="">
     <div class="modal-dialog modal-xl">
       <div class="modal-content" >
         <div class="modal-header">
           <h5 class="modal-title ml-3">周{{days[day!]}}第{{bigLesson! + 1}}节</h5>
+          <ul class="list-group list-group-horizontal ml-5">
+            <button class="btn border list-group-item"
+                    [ngClass]="{'bg-primary': !syncRecorder[day!][bigLesson!], 'text-white': !syncRecorder[day!][bigLesson!]}"
+                    [disabled]="isArrayHasNotEqualArray(tempData)"
+                    (click)="onSync()">启用同步</button>
+          </ul>
           <ul class="list-group list-group-horizontal">
             <button class="btn border list-group-item"
                     [ngClass]="{'bg-primary': smLessons.includes(0), 'text-white': smLessons.includes(0)}">小节1</button>
@@ -61,7 +65,7 @@
         <div class="modal-body">
           <div class=" row ">
             <span class="col-12">周:&nbsp;
-              <span class="text-muted" *ngIf="pattern" style="font-size: 0.7em">(选择某个周再选择对应教室，已占用周:&nbsp;{{getNotEmptyWeeks()}})</span>
+              <span class="text-muted" *ngIf="syncRecorder[day!][bigLesson!]" style="font-size: 0.7em">(选择某个周再选择对应教室，已占用周:&nbsp;{{getNotEmptyWeeks()}})</span>
             </span>
           </div>
           <ul class="list-group list-group-horizontal">
@@ -72,8 +76,8 @@
             </ng-container>
           </ul><br>
 
-          <div *ngIf="week !== undefined || !pattern">
-            <h6>教室<span class="text-muted" *ngIf="pattern" style="font-size: 0.7em">(周:{{week! + 1}})</span>:</h6>
+          <div *ngIf="week !== undefined || !syncRecorder[day!][bigLesson!]">
+            <h6>教室<span class="text-muted" *ngIf="syncRecorder[day!][bigLesson!]" style="font-size: 0.7em">(周:{{week! + 1}})</span>:</h6>
             <ul class="list-group list-group-horizontal">
               <ng-container *ngFor="let room of rooms" class="list-group-item">
                 <button [disabled]="isRoomDisabled(room.id!)"
@@ -82,12 +86,6 @@
               </ng-container>
             </ul>
           </div>
-          <!--          selectedWeeks{{selectedWeeks | json}}<br>-->
-          <!--          selectedRooms{{selectedRooms | json}}<br>-->
-          <!--          disabledWeeks{{disabledWeeks | json}}<br>-->
-          <!--          disabledRooms{{disabledRooms | json}}<br>-->
-          <!--          tempData{{tempData| json}}<br>-->
-          <!--          smLessons{{smLessons | json}}-->
           <br><br>
         </div>
         <div class="modal-footer">
@@ -97,3 +95,64 @@
     </div>
   </div>
 </app-yz-modal>
+
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">周{{days[day!]}}第{{bigLesson! + 1}}节</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col">
+            <table class="table table-bordered">
+              <thead>
+              <tr>
+                <th scope="col" class="col-2">周</th>
+                <th scope="col" class="col-2">地点</th>
+              </tr>
+              </thead>
+              <tbody>
+              <ng-container *ngFor="let week of weeks; index as index">
+                <ng-container *ngIf="week < weeks.length / 2">
+                  <tr>
+                    <th scope="row">第 {{week + 1}} 周
+                    <td>{{ getRoomsName(week) }}</td>
+                  </tr>
+                </ng-container>
+              </ng-container>
+              </tbody>
+            </table>
+          </div>
+          <div class="col">
+            <table class="table table-bordered">
+              <thead>
+              <tr>
+                <th scope="col" class="col-2">周</th>
+                <th scope="col" class="col-2">地点</th>
+              </tr>
+              </thead>
+              <tbody>
+              <ng-container *ngFor="let week of weeks; index as index">
+                <ng-container *ngIf="week >= weeks.length / 2">
+                  <tr>
+                    <th scope="row">第 {{week + 1}} 周
+                    <td>{{ getRoomsName(week) }}</td>
+                  </tr>
+                </ng-container>
+              </ng-container>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+  </div>
+</div>
