--- a/schedule/src/app/schedule/schedule.component.html
+++ b/schedule/src/app/schedule/schedule.component.html
@@ -25,11 +25,11 @@
   <div class="col-2">
     <app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size>
   </div>
-  <div class="col-2">
+  <div class="col-3">
     <span class="ml-5 font-weight-bold">激活学期:&nbsp;&nbsp;{{ term?.name}}</span>
   </div>
   <div class="col-2">
-    <span class="ml-5 font-weight-bold">当前周:&nbsp;&nbsp;{{ overtimeWeekNumber}}</span>
+    <span class="font-weight-bold">当前周:&nbsp;&nbsp;{{ overtimeWeekNumber}}</span>
   </div>
 </div>
 <table class="table table-striped mt-3">
