--- a/schedule/src/app/timetable/timetable.component.html
+++ b/schedule/src/app/timetable/timetable.component.html
@@ -45,10 +45,6 @@
   <div class="col-md-4">
     <div class="row">
       <input type="checkbox" name="isSelectWeek" id="isSelectWeek" (change)="setIsSelectWeek()" /><label class="ml-1 mt-2" for="isSelectWeek">按周显示</label>
-      <label class="col-form-label text-right col-sm-5" *ngIf="this.isSelectWeek"><code>*</code>请选择周数</label>
-      <select  class=" selectpicker form-control col-sm-3" *ngIf="this.isSelectWeek" formControlName="selectWeek" (change)="onSelectWeekChange()">
-        <option *ngFor="let week of getWeeksForSelectWeeks(this.weekNumber)" [value]="week">第{{ week }}周</option>
-      </select>
     </div>
   </div>
 </div>
@@ -135,11 +131,13 @@
 </div>
 <!-- 选择周的小节显示 -->
 <div class="row" *ngIf="this.formGroup.get('selectedTeacherId')?.value !== null && this.formGroup.get('displayMode')?.value === 'small' && this.isSelectWeek && term">
-  <div class="col-md-12">
+  <div class="col-md-12" *ngFor="let week of turnToArr(this.weekNumber)">
     <table class="table table-striped table-bordered">
       <thead class="table-primary">
       <tr>
-        <th class="col-md-1">{{ getWeeksForSelectWeeksShow(this.formGroup.get('selectWeek')?.value) }}</th>
+        {{ this.setSelectWeek(week) }}
+        {{ this.setBigModelContentForSelectWeek() }}
+        <th class="col-md-1">第{{ week }}周</th>
         <th class="col-md-1">周一</th>
         <th class="col-md-1">周二</th>
         <th class="col-md-1">周三</th>
@@ -174,11 +172,13 @@
 </div>
 <!-- 选择周的大节显示 -->
 <div class="row" *ngIf="this.formGroup.get('selectedTeacherId')?.value !== null && this.formGroup.get('displayMode')?.value === 'big' && this.isSelectWeek && term">
-  <div class="col-md-12">
+  <div class="col-md-12" *ngFor="let week of turnToArr(this.weekNumber)">
     <table class="table table-striped table-bordered">
       <thead class="table-primary">
       <tr>
-        <th class="col-md-1">{{ getWeeksForSelectWeeksShow(this.formGroup.get('selectWeek')?.value) }}</th>
+        {{ this.setSelectWeek(week) }}
+        {{ this.setBigModelContentForSelectWeek() }}
+        <th class="col-md-1">第{{ week }}周</th>
         <th class="col-md-1">周一</th>
         <th class="col-md-1">周二</th>
         <th class="col-md-1">周三</th>
