--- a/schedule/src/app/timetable/timetable.component.html
+++ b/schedule/src/app/timetable/timetable.component.html
@@ -6,11 +6,6 @@
     <div class="col-md-3">
       <div class="row">
         <label class="col-form-label text-right col-md-4"><code>*</code>教师</label>
-  <!--      <select class="selectpicker form-control col-md-8" formControlName="selectedTeacherId" (change)="onTeacherChange()">-->
-  <!--        <option [value]="'please'">请选择要查看课表的教师</option>-->
-  <!--        <option [value]="'all'">全部教师</option>-->
-  <!--        <option *ngFor="let teacher of allTeachers;" [value]="teacher.id">{{ teacher.name }}</option>-->
-  <!--      </select>-->
         <ng-select [items]="allTeachers"
                    bindLabel="name"
                    bindValue="id"
@@ -176,8 +171,8 @@
     <table class="table table-striped table-bordered">
       <thead class="table-primary">
       <tr>
-        {{ this.setSelectWeek(week) }}
-        {{ this.setBigModelContentForSelectWeek() }}
+        {{ setSelectWeek(week) }}
+        {{ setBigModelContentForSelectWeek() }}
         <th class="col-md-1">第{{ week }}周</th>
         <th class="col-md-1">周一</th>
         <th class="col-md-1">周二</th>
