--- a/schedule/src/app/schedule/edit/edit.component.html
+++ b/schedule/src/app/schedule/edit/edit.component.html
@@ -62,7 +62,7 @@
       </div>
       <div class="row col-sm-12">
         <div class="col">
-          <button style="float: right;" type="submit" (click)="onSubmit()" [disabled]="!canSubmit()" class="btn btn-primary mr-3"><i class="fas fa-save"></i>保存</button>
+          <button style="float: right;" type="submit" (click)="onSubmit()" [disabled]="selectedData.length <= 0" class="btn btn-primary mr-3"><i class="fas fa-save"></i>保存</button>
           <a style="float: right;" class="btn btn-primary" routerLink="../../">返回</a>
         </div>
       </div>
