--- a/schedule/src/app/room/room-detail/room-detail.component.html
+++ b/schedule/src/app/room/room-detail/room-detail.component.html
@@ -26,7 +26,7 @@
         <td  *ngFor="let bigLesson of bigLessons" class="col-sm-1 container-fluid">
           <div class="list-group">
             <button data-toggle="modal" data-target="#staticBackdrop" class="list-group-item" [ngClass]="{'list-group-item-primary': buttonActive(d, bigLesson)}" (click)="showModel(d, bigLesson)">
-              <span *ngIf="notEmptyWeeksTable[d][bigLesson].length">周: {{getNotEmptyWeeksOfTable(d, bigLesson)}}</span>
+              <span *ngIf="notEmptyWeeksTable[d][bigLesson].length">{{ this.getWeeks(getNotEmptyWeeksOfTable(d, bigLesson))}}</span>
             </button>
           </div>
         </td>
