--- a/schedule/src/app/clazz/edit/edit.component.html
+++ b/schedule/src/app/clazz/edit/edit.component.html
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class="form-group row">
-    <label for="entranceDate" class="col-sm-4 text-right col-form-label"><code>*</code>开学日期</label>
+    <label for="entranceDate" class="col-sm-4 text-right col-form-label"><code>*</code>入学日期</label>
     <div class="col-sm-8">
       <app-date formControlName="entranceDate" id="entranceDate"></app-date>
     </div>
