--- a/schedule/src/app/schedule/add/add.component.html
+++ b/schedule/src/app/schedule/add/add.component.html
@@ -13,7 +13,7 @@
                  bindValue="id"
                  formControlName="courseId"
                  placeholder="选择课程"
-                 style="width: 12em"
+                 style="width: 14em"
       >
       </ng-select>
     </div>
@@ -24,24 +24,35 @@
     <div class="form-group row">
       <label class="col-sm-2 text-right col-form-label"><code>*</code>上课班级<br>(可多选)</label>
       <div class="col-sm">
-        <select class="select picker form-control col-sm-3" style="width: 200px" formControlName="clazzIds" multiple id="klass">
-          <option [value]="null">请选择班级</option>
-          <option *ngFor="let clazz of screenedClazzes" [value]="+clazz.id">{{clazz.name}}</option>
-        </select>
+<!--        <select class="select picker form-control col-sm-3" style="width: 200px" formControlName="clazzIds" multiple id="klass">-->
+<!--          <option [value]="null">请选择班级</option>-->
+<!--          <option *ngFor="let clazz of screenedClazzes" [value]="+clazz.id">{{clazz.name}}</option>-->
+<!--        </select>-->
+
+        <ng-select [items]="screenedClazzes"
+                   bindLabel="name"
+                   bindValue="id"
+                   [multiple]="true"
+                   [closeOnSelect]="false"
+                   formControlName="clazzIds"
+                   placeholder="选择班级"
+                   style="width: 14em"
+        >
+        </ng-select>
       </div>
     </div>
-    <div class="form-group row">
-      <div class="offset-2 text-right">
-        <label style="font-size: 15px"><code>*</code>操作提示：Ctrl+鼠标左键可进行多选操作</label>
-      </div>
-    </div>
+<!--    <div class="form-group row">-->
+<!--      <div class="offset-2 text-right">-->
+<!--        <label style="font-size: 15px"><code>*</code>操作提示：Ctrl+鼠标左键可进行多选操作</label>-->
+<!--      </div>-->
+<!--    </div>-->
   </div>
 
   <!-- 选择教师 -->
   <div *ngIf="isShowTeacher()">
     <div class="form-group row">
       <label class="col-sm-2 text-right col-form-label" style="width: 162px"><code>*</code>教师</label>
-      <div class="col-sm-2">
+      <div class="col-sm-2 mr-2">
 <!--        <select class="select picker form-control col-sm-12" style="width: 200px" formControlName="teacher1Id" id="teacher1Id" required>-->
 <!--          <option [value]="null">请选择教师1</option>-->
 <!--          <option *ngFor="let teacher of teachers" [value]="+teacher.id">{{teacher.name}}</option>-->
@@ -51,7 +62,7 @@
                    bindValue="id"
                    formControlName="teacher1Id"
                    placeholder="选择教师1"
-                   style="width: 12em"
+                   style="width: 14em"
         >
         </ng-select>
       </div>
@@ -65,7 +76,7 @@
                    bindValue="id"
                    formControlName="teacher2Id"
                    placeholder="选择教师2"
-                   style="width: 12em"
+                   style="width: 14em"
         >
         </ng-select>
       </div>
