--- a/schedule/src/app/schedule/edit/edit-clazzes-and-teachers/edit-clazzes-and-teachers.component.html
+++ b/schedule/src/app/schedule/edit/edit-clazzes-and-teachers/edit-clazzes-and-teachers.component.html
@@ -28,7 +28,7 @@
   </div>
   <div class="form-group row">
     <label class="col-sm-2 text-right col-form-label" style="width: 162px"><code>*</code>教师</label>
-    <div class="col-sm-2">
+    <div class="col-sm-2 mr-2">
 <!--      <select class="select picker form-control col-sm-12" style="width: 200px" formControlName="teacher1Id" id="teacher1Id" required>-->
 <!--        <option [value]="null">请选择教师1</option>-->
 <!--        <option *ngFor="let teacher of selectableTeachers" [value]="+teacher.id">{{teacher.name}}</option>-->
