--- a/schedule/src/app/auth/auth.component.html
+++ b/schedule/src/app/auth/auth.component.html
@@ -12,7 +12,7 @@
   <div class="header">
     <div class="row m-0">
       <div class="col-md-3 offset-md-2">
-        <p class="title"><b>欢迎使用本系统!</b></p>
+        <p class="title"><b>欢迎使用排课管理系统!</b></p>
       </div>
     </div>
   </div>
