--- a/schedule/src/app/term/term.component.html
+++ b/schedule/src/app/term/term.component.html
@@ -35,7 +35,7 @@
     <td><span class="badge" [ngClass]="{ 'badge-primary': term.state, 'badge-secondary': !term.state }">{{ term.state | termState }}</span></td>
     <td>
       <a class="btn btn-sm btn-primary" [routerLink]="'edit/' + term.id"><i class="fas fa-edit"></i>编辑</a>
-      <button class="btn btn-sm btn-success col-md-3" (click)="active(term)" [disabled]="term.state"><i class="fas fa-hourglass-half"></i>激活</button>
+      <button class="btn btn-sm btn-success col-md-3" (click)="active(term)" [hidden]="term.state"><i class="fas fa-hourglass-half"></i>激活</button>
       <a class="btn btn-sm btn-danger" (click)="onDelete(term)" [hidden]="term.state"><i class="fas fa-trash"></i>删除</a>
     </td>
   </tr>
