--- a/schedule/src/app/part/layout/layout.component.html
+++ b/schedule/src/app/part/layout/layout.component.html
@@ -8,7 +8,7 @@
     <div class="menu border-right">
       <app-menu></app-menu>
     </div>
-    <div class="content col-10">
+    <div class="content col">
       <app-nav></app-nav>
       <div class="ml-4 mr-4">
         <router-outlet></router-outlet>
